adição de author (all), remodelação de book e chapter (all). Remodelação na regra de negócios, entidades, etc. Inicio da remodelação do controller de chapter.