@@ -8,6 +8,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.UUID;
 import java.util.stream.Collectors;
 
 @Service
@@ -18,11 +19,11 @@ public class BookService {
 
     public List<BookDTO> getAllBooks() {
         List<BookModel> books = repository.findAll();
-        return books.stream().map(this::convertBookModelToDTO).collect(Collectors.toList());
+        return books.stream().map(this::convertBookModelToDTO).toList();
     }
 
     // o que é optional<>? Procurar alternativas de não usar ele e declarar explicitamente o retorno como BookDTO
-    public Optional<BookModel> getBookById(Long id) { return repository.findById(id);}
+    public Optional<BookModel> getBookById(UUID id) { return repository.findById(id);}
 
     // talvez quando for adicionar o frontend isso aqui nao funcione porque vou precisar
     // transformar de DTO pra model pra salvar no banco. Processo inverso
@@ -31,7 +32,7 @@ public class BookService {
         return convertBookModelToDTO(book);
     }
 
-    private BookDTO convertBookModelToDTO(BookModel book) {
-        return new BookDTO(book.getTitle(), book.getSinopsis(), book.getAuthor());
+    private BookDTO convertBookModelToDTO(BookModel bookModel) {
+        return new BookDTO(bookModel.getTitle(), bookModel.getSynopsis(), bookModel.getAuthor().getName());
     }
 }
